<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomePage">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="268dp"
        android:layout_height="85dp"
        android:gravity="center"
        android:text="@string/mychitti"
        android:textColor="#FF018786"
        android:textFontWeight="@integer/material_motion_duration_long_1"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="267dp"
        android:layout_height="73dp"
        android:gravity="center"
        android:text="@string/keep_your_all_chit_funds_in_one_place"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.299" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="75dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.454">

        <Button
            android:id="@+id/buttonSignInWelcomeActivity"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:lineSpacingExtra="10sp"
            android:text="@string/sign_in"
            android:textColor="#ffffff"
            app:backgroundTint="@color/teal_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
            app:layout_constraintVertical_bias="0.201"
            app:shapeAppearance="@style/Circular"
            tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck" />

        <Button
            android:id="@+id/buttonRegisterWelcomeActivity"
            style="@android:style/Widget.DeviceDefault.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:lineSpacingExtra="10sp"
            android:minHeight="48dp"
            android:text="@string/register"
            android:textColor="@color/teal_700"
            app:shapeAppearance="@style/Circular"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>